--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Misfit</title>
-  <base href="/">
+  <base href="/misfit">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/fevicon.png" type="image/gif" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
